[FIX][CSS] modalMsg: overflow

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -56,6 +56,7 @@
 	border: 1px solid var( --modalMsg-borderColor );
 	border-radius: var( --borderRadius );
 	background-color: var( --modal-elem-bg );
+	overflow-wrap: break-word;
 }
 .modalMsg:not(:last-child) {
 	margin-bottom: var( --modal-elem-marginB );
